// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BlockSkeleton /> should render a block skeleton 1`] = `
.c1 {
  -webkit-animation: hNBTQs 1.2s ease-in-out infinite;
  animation: hNBTQs 1.2s ease-in-out infinite;
  background-color: #F2F5F7;
  background-image: linear-gradient(90deg,#F2F5F7,#E1E6EB,#F2F5F7);
  background-repeat: no-repeat;
  background-size: 200px 100%;
  border: 1px solid #F2F5F7;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 {
  border-radius: 4px;
  line-height: 1rem;
  width: 100%;
  height: 1rem;
}

<BlockSkeleton
  showSkeleton={true}
>
  <Styled(styled.span)>
    <styled.span
      className="c0"
    >
      <span
        className="c0 c1"
      />
    </styled.span>
  </Styled(styled.span)>
</BlockSkeleton>
`;

exports[`<BlockSkeleton /> should render a block skeleton with set width and height 1`] = `
.c1 {
  -webkit-animation: hNBTQs 1.2s ease-in-out infinite;
  animation: hNBTQs 1.2s ease-in-out infinite;
  background-color: #F2F5F7;
  background-image: linear-gradient(90deg,#F2F5F7,#E1E6EB,#F2F5F7);
  background-repeat: no-repeat;
  background-size: 200px 100%;
  border: 1px solid #F2F5F7;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 {
  border-radius: 4px;
  line-height: 1rem;
  width: 400px;
  height: 200px;
}

<BlockSkeleton
  height={200}
  showSkeleton={true}
  width={400}
>
  <Styled(styled.span)
    height={200}
    width={400}
  >
    <styled.span
      className="c0"
      height={200}
      width={400}
    >
      <span
        className="c0 c1"
        height={200}
        width={400}
      />
    </styled.span>
  </Styled(styled.span)>
</BlockSkeleton>
`;
